# ROI-Flow

./: .replit  README.md  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-notes.md  pyproject.toml  replit.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/lib/: classifier.ts  n8nBuilder.ts  roiEngine.ts
artifacts/api-server/src/routes/: index.ts  opportunities.ts
artifacts/gradio-share/: app.py  requirements.txt
artifacts/mockup-sandbox/: package.json
artifacts/mockup-sandbox/src/: App.tsx
artifacts/python-api/: start.py
artifacts/python-api/app/: classifier.py  database.py  graph.py  llm_provider.py  main.py  n8n_builder.py  roi_engine.py  routes.py  state.py
artifacts/roiflow/: index.html  package.json  requirements.yaml  vite.config.ts
artifacts/roiflow/.replit-artifact/: artifact.toml
artifacts/roiflow/src/: App.tsx  index.css
artifacts/roiflow/src/components/: copy-button.tsx  layout.tsx
artifacts/roiflow/src/components/analysis/: agent-pipeline.tsx  roi-gauge.tsx
artifacts/roiflow/src/components/ui/: button.tsx
artifacts/roiflow/src/lib/: api.ts
artifacts/roiflow/src/pages/: dashboard.tsx  results.tsx  submit.tsx
attached_assets/: Pasted-Build-a-complete-MVP-web-app-called-ROIFlow-AI-Voice-Te_1774587271156.txt  Pasted-Build-a-lightweight-MVP-web-app-called-ROIFlow-Goal-Cre_1774582027615.txt
lib/api-spec/: openapi.yaml
lib/db/src/schema/: index.ts  opportunities.ts
